--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<h1>Few planets in our solar system</h1>
-	<h3> Info about few of the planets</h3>
+	<h3> Info on some of the planets</h3>
 	<table class="maintable">
 		<tr class="firsttablerow">
 			<th>Planet</th>
